--- a/index.html
+++ b/index.html
@@ -17,3 +17,248 @@
 </body>
 
 </html>
+
+<!-- 
+Commit incial: Proyecto React y Tailwind
+Navbar, Page(Catalogo/Home)
+ProductCard + CatalogoPage + Img
+
+Commit: Header y Footer:
+  - index.html:  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  - bootstrap ^5.3.8 y react-bootstrap ^2.10.10
+  - src/App.tsx - Se aplicó el footer y header. Ejemplo:
+  <Route 
+          path="/" 
+          element={ <PublicLayout><HomePage /></PublicLayout> } 
+        />
+
+        {/* Ruta de Login (sin Footer) */}
+        <Route 
+          path="/login" 
+          element={ <PublicLayout showFooter={false}><LoginPage /></PublicLayout> } 
+        />
+  - Conflicto con las imagenes, ya se tenían las imágenes dentro de public, pero en este commit se creó una carpeta de img en assets con las imágenes (otra vez)
+  - Creación de src/assets/styles/footer.css
+  - Creación de src/assets/styles/global.css
+  - Creación de src/assets/styles/header.css
+  **Si lo estamos haciendo en tailwind, entonces los cambios deberían ser en tailwind-config no? para qué hacer un css o cómo sirve en este proyecto
+  - Creación de src/components/layout/ContactItem:
+  // Definimos la "interfaz" (la forma) de las props. TypeScript nos obligará a pasar un 'icon' y un 'text' cada vez que usemos este componente.
+interface ContactItemProps {
+  icon: string; 
+  text: string; 
+}
+
+// Usamos "desestructuración" ({ icon, text }) para acceder a las props directamente.
+function ContactItem({ icon, text }: ContactItemProps) {
+  return (
+    <div className="contacto-item">
+      <i className={icon}></i>
+      <span>{text}</span>
+    </div>
+  );
+}
+- Creación de scr/components/layout/Footer.tsx
+- Creación de scr/components/layout/FooterLinkList.tsx
+- Creación de src/components/layout/Header.tsx
+- Creación de src/components/layout/PublicLayout.tsx
+- importaciones en src/main.tsx
+- src/pages/CatalogoPages.tsx pasó a src/pages/public/CatalogoPages.tsx, lo mismo con HomePage.tsx
+
+Commit: ProductCard implementado en el Home
+- src/components/ui/ProductCard.module.css
+- src/components/ui/ProductCard.tsx: 
+@@ -0,0 +1,47 @@
+import { Card } from 'react-bootstrap';
+import { useNavigate } from 'react-router-dom';
+
+import styles from './ProductCard.module.css';
+import type { Product } from '../../types/Product';
+import { formatearPrecio } from '../../utils/formatters';
+
+interface ProductCardProps {
+  product: Product;
+}
+
+function ProductCard({ product }: ProductCardProps) {
+  const navigate = useNavigate();
+
+  const handleViewDetails = () => {
+    navigate(`/producto/${product.id}`);
+  };
+
+  return (
+    <Card 
+      className={`h-100 ${styles.productCard}`}
+      onClick={handleViewDetails} 
+    >
+    
+      {/* Card.Img es un hijo directo del <Card> con onClick */}
+      <Card.Img
+        variant="top"
+        src={product.imagen}
+        alt={product.nombre}
+        className={styles.productImage}
+      />
+
+      <Card.Body className="d-flex flex-column flex-grow-1">
+        <Card.Title className={styles.productName}>{product.nombre}</Card.Title>
+
+        <div className={styles.productPrice}>
+          {formatearPrecio(product.precio)}
+        </div>
+        
+        {/* El botón eliminado se queda eliminado, ¡perfecto! */}
+      </Card.Body>
+
+    </Card> // <-- Cierra el <Card> padre
+  );
+}
+
+export default ProductCard;
+
+- Creación de src/components/ui/ProductFilterBar.module.css
+- Creación de src/components/ui/ProductFilterBar.tsx
+- Creación de src/pages/public/CatalogoPage.tsx: 
+// src/pages/public/CatalogoPage/CatalogoPage.tsx
+import React, { useState } from 'react'; // 1. ¡Importamos 'useState' desde React!
+import { Container, Row, Col } from 'react-bootstrap';
+import ProductFilterBar from '../../components/ui/ProductFilterBar';
+import { obtenerNombreCategoria } from '../../utils/formatters';
+import ProductCard from '../../components/ui/ProductCard';
+import dbData from '../../../db.json';
+import type { Product } from '../../types/Product';
+
+// --- Cargamos los datos ---
+const allProducts = dbData.productos as Product[];
+
+// Creamos la lista de categorías para los botones
+// 1. Obtenemos todas las categorías (ej: ["tortas-cuadradas", "tortas-circulares", ...])
+const allCategories = allProducts.map(p => p.categoria);
+// 2. Filtramos para que solo queden valores únicos
+const uniqueCategories = [...new Set(allCategories)];
+// 3. Añadimos "todas" al inicio
+const filterCategories = ["todas", ...uniqueCategories];
+
+
+function CatalogoPage() {
+
+  // 2. ¡AQUÍ ESTÁ EL ESTADO (STATE)!
+  // 'useState' nos da dos cosas:
+  // 1. 'activeCategory': La variable que GUARDA el estado (la memoria).
+  // 2. 'setActiveCategory': La función que USAMOS para CAMBIAR el estado.
+  // Le decimos que el valor inicial sea "todas".
+
+  const [activeCategory, setActiveCategory] = useState("todas");
+
+  // 3. Lógica de Filtrado
+  // Filtramos la lista de productos ANTES de renderizar.
+  // Esta variable se recalcula CADA VEZ que el estado cambia.
+  const filteredProducts = allProducts.filter(product => {
+    // Si la categoría activa es "todas", devolvemos 'true' (mostramos todo)
+    if (activeCategory === "todas") {
+      return true; 
+    }
+    // Si no, solo devolvemos 'true' si la categoría del producto coincide
+    return product.categoria === activeCategory;
+  });
+
+  return (
+    <Container className="py-5">
+      <section className="text-center mb-5">
+        <h1 className="pacifico-regular">Nuestro Catálogo</h1>
+      </section>
+
+      {/* 4. EL COMPONENTE DE FILTROS (EL "HIJO")
+       * Le pasamos:
+       * - La lista de botones a crear (categories)
+       * - Cuál es el botón activo (activeCategory)
+       * - La función para cambiar el estado (onFilterChange)
+      */}
+      <ProductFilterBar 
+        categories={filterCategories}
+        activeCategory={activeCategory}
+        onFilterChange={setActiveCategory} // ¡Pasamos la función del 'useState' directo!
+      />
+
+      {/* 5. EL GRID DE PRODUCTOS (EL RESULTADO) */}
+      <section>
+        <h2 className="mb-4">
+          {/* Usamos tu 'helper' para el título */}
+          {obtenerNombreCategoria(activeCategory)}
+        </h2>
+
+        <Row>
+          {/* Hacemos .map() sobre la lista YA FILTRADA */}
+          {filteredProducts.map(product => (
+            <Col key={product.id} xs={12} md={6} lg={3} className="mb-4">
+              <ProductCard product={product} />
+            </Col>
+          ))}
+        </Row>
+
+        {/* (Opcional) Mensaje si no hay productos */}
+        {filteredProducts.length === 0 && (
+          <Col className="text-center">
+            <p>No se encontraron productos en esta categoría.</p>
+          </Col>
+        )}
+      </section>
+    </Container>
+  );
+}
+- Se eliminó src/pages/public/CatalogoPages.tsx
+- Creación de src/pages/public/HomePage.module.css
+- Desarrollo de src/pages/public/HomePage.tsx: 
+import { Container, Row, Col, Button } from 'react-bootstrap';
+import { Link } from 'react-router-dom';
+import type { Product } from '../../types/Product';
+import ProductCard from '../../components/ui/ProductCard';
+import dbData from '../../../db.json';
+import styles from './HomePage.module.css'; // (Ya lo tienes)
+const allProducts = dbData.productos as Product[];
+const featuredProducts = allProducts.slice(0, 4);
+
+function HomePage() {
+  return (
+    <>
+      <section className={styles.heroBanner}>
+        <Container className={styles.heroContent}>
+          <h1 className={styles.heroTitle}>Mil Sabores</h1>
+          <p className={styles.heroSubtitle}>Sabores únicos, momentos inolvidables.</p>
+          <Button
+            as={Link}
+            to="/catalogo"
+            size="lg"
+            className={styles.heroButton}>
+
+            Ver Catálogo </Button>
+        </Container>
+      </section>
+
+      {/* --- SECCIÓN 2: PRODUCTOS DESTACADOS (Contenida) --- */}
+      {/*Esta sección necesita su PROPIO <Container> 
+       * para alinear las tarjetas con el contenido del banner.
+       */}
+      <Container className="py-5">
+        <section>
+          <h2 className="mb-4">Productos Destacados</h2>
+          <Row>
+            {featuredProducts.map(product => (
+              <Col key={product.id} xs={12} md={6} lg={3} className="mb-4">
+                <ProductCard product={product} />
+              </Col>
+            ))}
+          </Row>
+        </section>
+      </Container>
+
+    </>
+  );
+}
+- Creación de src/types/Product.ts
+- Se añadieron línea en tsconfig.app.json:  "resolveJsonModule": true,
+    "esModuleInterop": true,
+-->
